{
  "version": 4,
  "terraform_version": "0.14.6",
  "serial": 714,
  "lineage": "090e3ab7-7694-d174-861c-08710f4dae73",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:832547021231:security-group/sg-0fb364f67b47e8d30",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fb364f67b47e8d30",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "TLS from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-011bf57debe4827a9"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_traffic",
            "name_prefix": "",
            "owner_id": "832547021231",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-0104840f41aa5cf67"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nphc_vpc.aws_security_group.allow_all_traffic",
            "module.nphc_vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.nphc_elb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:832547021231:loadbalancer/app/tf-20221105141510004300000001/ea270b3377eac747",
            "arn_suffix": "app/tf-20221105141510004300000001/ea270b3377eac747",
            "desync_mitigation_mode": "defensive",
            "dns_name": "tf-20221105141510004300000001-1912135542.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:832547021231:loadbalancer/app/tf-20221105141510004300000001/ea270b3377eac747",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-20221105141510004300000001",
            "name_prefix": "tf-",
            "preserve_host_header": false,
            "security_groups": [
              "sg-011bf57debe4827a9"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0370e2c001b6739dd"
              },
              {
                "subnet_id": "subnet-04a0eda8a9265d7f4"
              },
              {
                "subnet_id": "subnet-074827ae03e78f4ce"
              }
            ],
            "subnets": [
              "subnet-0370e2c001b6739dd",
              "subnet-04a0eda8a9265d7f4",
              "subnet-074827ae03e78f4ce"
            ],
            "vpc_id": "vpc-0104840f41aa5cf67",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "module.nphc_vpc.aws_security_group.allow_all_traffic",
            "module.nphc_vpc.aws_subnet.private",
            "module.nphc_vpc.aws_vpc.main",
            "module.nphc_vpc.data.aws_availability_zones.all"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.nphc_elb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:832547021231:listener/app/tf-20221105141510004300000001/ea270b3377eac747/d58d3e2c88d3371f",
            "certificate_arn": "",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:832547021231:targetgroup/tf-20221105141712686300000006/110429a95ae0b3d7",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:832547021231:listener/app/tf-20221105141510004300000001/ea270b3377eac747/d58d3e2c88d3371f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:832547021231:loadbalancer/app/tf-20221105141510004300000001/ea270b3377eac747",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nphc_elb.aws_lb.main",
            "module.nphc_elb.aws_lb_target_group.main",
            "module.nphc_vpc.aws_security_group.allow_all_traffic",
            "module.nphc_vpc.aws_subnet.private",
            "module.nphc_vpc.aws_vpc.main",
            "module.nphc_vpc.data.aws_availability_zones.all"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.nphc_elb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:832547021231:targetgroup/tf-20221105141712686300000006/110429a95ae0b3d7",
            "arn_suffix": "targetgroup/tf-20221105141712686300000006/110429a95ae0b3d7",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 6,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:832547021231:targetgroup/tf-20221105141712686300000006/110429a95ae0b3d7",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tf-20221105141712686300000006",
            "name_prefix": "tf-",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0104840f41aa5cf67"
          },
          "dependencies": [
            "module.nphc_elb.aws_lb.main",
            "module.nphc_vpc.aws_security_group.allow_all_traffic",
            "module.nphc_vpc.aws_subnet.private",
            "module.nphc_vpc.aws_vpc.main",
            "module.nphc_vpc.data.aws_availability_zones.all"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.nphc_vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00f7e2367df356d4b",
            "association_id": "eipassoc-054030c3138c733b7",
            "domain": "vpc",
            "id": "eipalloc-00f7e2367df356d4b",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-0d298018d1fe755a6",
            "private_dns": "ip-10-0-53-110.ap-southeast-1.compute.internal",
            "private_ip": "10.0.53.110",
            "public_dns": "ec2-13-215-117-103.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.215.117.103",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "vpc_eip_0",
              "managed_by": "terraform",
              "service": "networking"
            },
            "tags_all": {
              "Name": "vpc_eip_0",
              "managed_by": "terraform",
              "service": "networking"
            },
            "vpc": true
          },
          "dependencies": [
            "module.nphc_vpc.aws_internet_gateway.gateway",
            "module.nphc_vpc.aws_vpc.main",
            "module.nphc_vpc.data.aws_availability_zones.all"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06920971206b350ba",
            "association_id": "eipassoc-04beecb7d2b11affa",
            "domain": "vpc",
            "id": "eipalloc-06920971206b350ba",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-036a1238ae70d02d1",
            "private_dns": "ip-10-0-77-146.ap-southeast-1.compute.internal",
            "private_ip": "10.0.77.146",
            "public_dns": "ec2-3-0-242-67.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "3.0.242.67",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "vpc_eip_1",
              "managed_by": "terraform",
              "service": "networking"
            },
            "tags_all": {
              "Name": "vpc_eip_1",
              "managed_by": "terraform",
              "service": "networking"
            },
            "vpc": true
          },
          "dependencies": [
            "module.nphc_vpc.aws_internet_gateway.gateway",
            "module.nphc_vpc.aws_vpc.main",
            "module.nphc_vpc.data.aws_availability_zones.all"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d64f6c65d7f3dd0c",
            "association_id": "eipassoc-0dffde3dc782f1c3e",
            "domain": "vpc",
            "id": "eipalloc-0d64f6c65d7f3dd0c",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-0e68eafdbef5a79d1",
            "private_dns": "ip-10-0-82-150.ap-southeast-1.compute.internal",
            "private_ip": "10.0.82.150",
            "public_dns": "ec2-13-215-62-134.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.215.62.134",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "vpc_eip_2",
              "managed_by": "terraform",
              "service": "networking"
            },
            "tags_all": {
              "Name": "vpc_eip_2",
              "managed_by": "terraform",
              "service": "networking"
            },
            "vpc": true
          },
          "dependencies": [
            "module.nphc_vpc.aws_internet_gateway.gateway",
            "module.nphc_vpc.aws_vpc.main",
            "module.nphc_vpc.data.aws_availability_zones.all"
          ]
        }
      ]
    },
    {
      "module": "module.nphc_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:832547021231:internet-gateway/igw-00d6a87c3d185d353",
            "id": "igw-00d6a87c3d185d353",
            "owner_id": "832547021231",
            "tags": {
              "Name": "vpc_ig",
              "managed_by": "terraform",
              "service": "networking"
            },
            "tags_all": {
              "Name": "vpc_ig",
              "managed_by": "terraform",
              "service": "networking"
            },
            "vpc_id": "vpc-0104840f41aa5cf67"
          },
          "dependencies": [
            "module.nphc_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.nphc_vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00f7e2367df356d4b",
            "connectivity_type": "public",
            "id": "nat-0158e0e64568b8d87",
            "network_interface_id": "eni-0d298018d1fe755a6",
            "private_ip": "10.0.53.110",
            "public_ip": "13.215.117.103",
            "subnet_id": "subnet-0e258deed72f1455c",
            "tags": {
              "Name": "vpc_nat_0",
              "managed_by": "terraform",
              "service": "networking"
            },
            "tags_all": {
              "Name": "vpc_nat_0",
              "managed_by": "terraform",
              "service": "networking"
            }
          },
          "dependencies": [
            "module.nphc_vpc.aws_eip.nat_eip",
            "module.nphc_vpc.aws_internet_gateway.gateway",
            "module.nphc_vpc.aws_subnet.public",
            "module.nphc_vpc.aws_vpc.main",
            "module.nphc_vpc.data.aws_availability_zones.all"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06920971206b350ba",
            "connectivity_type": "public",
            "id": "nat-0054f90c1d1407bdb",
            "network_interface_id": "eni-036a1238ae70d02d1",
            "private_ip": "10.0.77.146",
            "public_ip": "3.0.242.67",
            "subnet_id": "subnet-0b13053cbc7551369",
            "tags": {
              "Name": "vpc_nat_1",
              "managed_by": "terraform",
              "service": "networking"
            },
            "tags_all": {
              "Name": "vpc_nat_1",
              "managed_by": "terraform",
              "service": "networking"
            }
          },
          "dependencies": [
            "module.nphc_vpc.aws_eip.nat_eip",
            "module.nphc_vpc.aws_internet_gateway.gateway",
            "module.nphc_vpc.aws_subnet.public",
            "module.nphc_vpc.aws_vpc.main",
            "module.nphc_vpc.data.aws_availability_zones.all"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d64f6c65d7f3dd0c",
            "connectivity_type": "public",
            "id": "nat-0fe2745dcf003a9e9",
            "network_interface_id": "eni-0e68eafdbef5a79d1",
            "private_ip": "10.0.82.150",
            "public_ip": "13.215.62.134",
            "subnet_id": "subnet-01ad11e641d22f98f",
            "tags": {
              "Name": "vpc_nat_2",
              "managed_by": "terraform",
              "service": "networking"
            },
            "tags_all": {
              "Name": "vpc_nat_2",
              "managed_by": "terraform",
              "service": "networking"
            }
          },
          "dependencies": [
            "module.nphc_vpc.aws_eip.nat_eip",
            "module.nphc_vpc.aws_internet_gateway.gateway",
            "module.nphc_vpc.aws_subnet.public",
            "module.nphc_vpc.aws_vpc.main",
            "module.nphc_vpc.data.aws_availability_zones.all"
          ]
        }
      ]
    },
    {
      "module": "module.nphc_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_to_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0bd313a8dfc6b27b91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0158e0e64568b8d87",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0bd313a8dfc6b27b9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nphc_vpc.aws_eip.nat_eip",
            "module.nphc_vpc.aws_internet_gateway.gateway",
            "module.nphc_vpc.aws_nat_gateway.nat",
            "module.nphc_vpc.aws_route_table.private",
            "module.nphc_vpc.aws_subnet.public",
            "module.nphc_vpc.aws_vpc.main",
            "module.nphc_vpc.data.aws_availability_zones.all"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-08feadb77120f16b61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0054f90c1d1407bdb",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08feadb77120f16b6",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nphc_vpc.aws_eip.nat_eip",
            "module.nphc_vpc.aws_internet_gateway.gateway",
            "module.nphc_vpc.aws_nat_gateway.nat",
            "module.nphc_vpc.aws_route_table.private",
            "module.nphc_vpc.aws_subnet.public",
            "module.nphc_vpc.aws_vpc.main",
            "module.nphc_vpc.data.aws_availability_zones.all"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-00478bf276c0f2c421080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0fe2745dcf003a9e9",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00478bf276c0f2c42",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nphc_vpc.aws_eip.nat_eip",
            "module.nphc_vpc.aws_internet_gateway.gateway",
            "module.nphc_vpc.aws_nat_gateway.nat",
            "module.nphc_vpc.aws_route_table.private",
            "module.nphc_vpc.aws_subnet.public",
            "module.nphc_vpc.aws_vpc.main",
            "module.nphc_vpc.data.aws_availability_zones.all"
          ]
        }
      ]
    },
    {
      "module": "module.nphc_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_to_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-00d6a87c3d185d353",
            "id": "r-rtb-0909ac770f55111a31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0909ac770f55111a3",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nphc_vpc.aws_internet_gateway.gateway",
            "module.nphc_vpc.aws_route_table.public",
            "module.nphc_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.nphc_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:832547021231:route-table/rtb-0bd313a8dfc6b27b9",
            "id": "rtb-0bd313a8dfc6b27b9",
            "owner_id": "832547021231",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0158e0e64568b8d87",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vpc_route_table_0",
              "managed_by": "terraform",
              "service": "networking"
            },
            "tags_all": {
              "Name": "vpc_route_table_0",
              "managed_by": "terraform",
              "service": "networking"
            },
            "timeouts": null,
            "vpc_id": "vpc-0104840f41aa5cf67"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nphc_vpc.aws_vpc.main",
            "module.nphc_vpc.data.aws_availability_zones.all"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:832547021231:route-table/rtb-08feadb77120f16b6",
            "id": "rtb-08feadb77120f16b6",
            "owner_id": "832547021231",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0054f90c1d1407bdb",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vpc_route_table_1",
              "managed_by": "terraform",
              "service": "networking"
            },
            "tags_all": {
              "Name": "vpc_route_table_1",
              "managed_by": "terraform",
              "service": "networking"
            },
            "timeouts": null,
            "vpc_id": "vpc-0104840f41aa5cf67"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nphc_vpc.aws_vpc.main",
            "module.nphc_vpc.data.aws_availability_zones.all"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:832547021231:route-table/rtb-00478bf276c0f2c42",
            "id": "rtb-00478bf276c0f2c42",
            "owner_id": "832547021231",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0fe2745dcf003a9e9",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vpc_route_table_2",
              "managed_by": "terraform",
              "service": "networking"
            },
            "tags_all": {
              "Name": "vpc_route_table_2",
              "managed_by": "terraform",
              "service": "networking"
            },
            "timeouts": null,
            "vpc_id": "vpc-0104840f41aa5cf67"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nphc_vpc.aws_vpc.main",
            "module.nphc_vpc.data.aws_availability_zones.all"
          ]
        }
      ]
    },
    {
      "module": "module.nphc_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:832547021231:route-table/rtb-0909ac770f55111a3",
            "id": "rtb-0909ac770f55111a3",
            "owner_id": "832547021231",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00d6a87c3d185d353",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vpc_route_table",
              "managed_by": "terraform",
              "service": "networking"
            },
            "tags_all": {
              "Name": "vpc_route_table",
              "managed_by": "terraform",
              "service": "networking"
            },
            "timeouts": null,
            "vpc_id": "vpc-0104840f41aa5cf67"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nphc_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.nphc_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dbf2444540093551",
            "route_table_id": "rtb-0bd313a8dfc6b27b9",
            "subnet_id": "subnet-0370e2c001b6739dd"
          },
          "dependencies": [
            "module.nphc_vpc.aws_route_table.private",
            "module.nphc_vpc.aws_subnet.private",
            "module.nphc_vpc.aws_vpc.main",
            "module.nphc_vpc.data.aws_availability_zones.all"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02d80e631d661bca0",
            "route_table_id": "rtb-08feadb77120f16b6",
            "subnet_id": "subnet-04a0eda8a9265d7f4"
          },
          "dependencies": [
            "module.nphc_vpc.aws_route_table.private",
            "module.nphc_vpc.aws_subnet.private",
            "module.nphc_vpc.aws_vpc.main",
            "module.nphc_vpc.data.aws_availability_zones.all"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07a4dd6a0c54430bf",
            "route_table_id": "rtb-00478bf276c0f2c42",
            "subnet_id": "subnet-074827ae03e78f4ce"
          },
          "dependencies": [
            "module.nphc_vpc.aws_route_table.private",
            "module.nphc_vpc.aws_subnet.private",
            "module.nphc_vpc.aws_vpc.main",
            "module.nphc_vpc.data.aws_availability_zones.all"
          ]
        }
      ]
    },
    {
      "module": "module.nphc_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b2488dafd5b82a88",
            "route_table_id": "rtb-0909ac770f55111a3",
            "subnet_id": "subnet-0e258deed72f1455c"
          },
          "dependencies": [
            "module.nphc_vpc.aws_route_table.public",
            "module.nphc_vpc.aws_subnet.public",
            "module.nphc_vpc.aws_vpc.main",
            "module.nphc_vpc.data.aws_availability_zones.all"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0869529200fbfbd8d",
            "route_table_id": "rtb-0909ac770f55111a3",
            "subnet_id": "subnet-0b13053cbc7551369"
          },
          "dependencies": [
            "module.nphc_vpc.aws_route_table.public",
            "module.nphc_vpc.aws_subnet.public",
            "module.nphc_vpc.aws_vpc.main",
            "module.nphc_vpc.data.aws_availability_zones.all"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02c0514bb47902ff1",
            "route_table_id": "rtb-0909ac770f55111a3",
            "subnet_id": "subnet-01ad11e641d22f98f"
          },
          "dependencies": [
            "module.nphc_vpc.aws_route_table.public",
            "module.nphc_vpc.aws_subnet.public",
            "module.nphc_vpc.aws_vpc.main",
            "module.nphc_vpc.data.aws_availability_zones.all"
          ]
        }
      ]
    },
    {
      "module": "module.nphc_vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:832547021231:security-group/sg-011bf57debe4827a9",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-011bf57debe4827a9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_all_traffic",
            "name_prefix": "",
            "owner_id": "832547021231",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_all_tls"
            },
            "tags_all": {
              "Name": "allow_all_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-0104840f41aa5cf67"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nphc_vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.nphc_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:832547021231:subnet/subnet-0370e2c001b6739dd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0370e2c001b6739dd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "832547021231",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc_ap-southeast-1a_private",
              "managed_by": "terraform",
              "service": "networking",
              "subnet": "private"
            },
            "tags_all": {
              "Name": "vpc_ap-southeast-1a_private",
              "managed_by": "terraform",
              "service": "networking",
              "subnet": "private"
            },
            "vpc_id": "vpc-0104840f41aa5cf67"
          },
          "dependencies": [
            "module.nphc_vpc.aws_vpc.main",
            "module.nphc_vpc.data.aws_availability_zones.all"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:832547021231:subnet/subnet-04a0eda8a9265d7f4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04a0eda8a9265d7f4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "832547021231",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc_ap-southeast-1b_private",
              "managed_by": "terraform",
              "service": "networking",
              "subnet": "private"
            },
            "tags_all": {
              "Name": "vpc_ap-southeast-1b_private",
              "managed_by": "terraform",
              "service": "networking",
              "subnet": "private"
            },
            "vpc_id": "vpc-0104840f41aa5cf67"
          },
          "dependencies": [
            "module.nphc_vpc.aws_vpc.main",
            "module.nphc_vpc.data.aws_availability_zones.all"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:832547021231:subnet/subnet-074827ae03e78f4ce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-074827ae03e78f4ce",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "832547021231",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc_ap-southeast-1c_private",
              "managed_by": "terraform",
              "service": "networking",
              "subnet": "private"
            },
            "tags_all": {
              "Name": "vpc_ap-southeast-1c_private",
              "managed_by": "terraform",
              "service": "networking",
              "subnet": "private"
            },
            "vpc_id": "vpc-0104840f41aa5cf67"
          },
          "dependencies": [
            "module.nphc_vpc.aws_vpc.main",
            "module.nphc_vpc.data.aws_availability_zones.all"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.nphc_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:832547021231:subnet/subnet-0e258deed72f1455c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.48.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e258deed72f1455c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "832547021231",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc_ap-southeast-1a_public",
              "managed_by": "terraform",
              "service": "networking",
              "subnet": "public"
            },
            "tags_all": {
              "Name": "vpc_ap-southeast-1a_public",
              "managed_by": "terraform",
              "service": "networking",
              "subnet": "public"
            },
            "vpc_id": "vpc-0104840f41aa5cf67"
          },
          "dependencies": [
            "module.nphc_vpc.aws_vpc.main",
            "module.nphc_vpc.data.aws_availability_zones.all"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:832547021231:subnet/subnet-0b13053cbc7551369",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.64.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b13053cbc7551369",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "832547021231",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc_ap-southeast-1b_public",
              "managed_by": "terraform",
              "service": "networking",
              "subnet": "public"
            },
            "tags_all": {
              "Name": "vpc_ap-southeast-1b_public",
              "managed_by": "terraform",
              "service": "networking",
              "subnet": "public"
            },
            "vpc_id": "vpc-0104840f41aa5cf67"
          },
          "dependencies": [
            "module.nphc_vpc.aws_vpc.main",
            "module.nphc_vpc.data.aws_availability_zones.all"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:832547021231:subnet/subnet-01ad11e641d22f98f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.80.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01ad11e641d22f98f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "832547021231",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc_ap-southeast-1c_public",
              "managed_by": "terraform",
              "service": "networking",
              "subnet": "public"
            },
            "tags_all": {
              "Name": "vpc_ap-southeast-1c_public",
              "managed_by": "terraform",
              "service": "networking",
              "subnet": "public"
            },
            "vpc_id": "vpc-0104840f41aa5cf67"
          },
          "dependencies": [
            "module.nphc_vpc.aws_vpc.main",
            "module.nphc_vpc.data.aws_availability_zones.all"
          ]
        }
      ]
    },
    {
      "module": "module.nphc_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:832547021231:vpc/vpc-0104840f41aa5cf67",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-081bdc12211df552d",
            "default_route_table_id": "rtb-09bbe8a75ce9dbef2",
            "default_security_group_id": "sg-00ebf475b2dec6eb3",
            "dhcp_options_id": "dopt-031a11f6c6dbec948",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0104840f41aa5cf67",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09bbe8a75ce9dbef2",
            "owner_id": "832547021231",
            "tags": {
              "Name": "vpc",
              "managed_by": "terraform",
              "service": "networking"
            },
            "tags_all": {
              "Name": "vpc",
              "managed_by": "terraform",
              "service": "networking"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}